Adds Basic Infrastructure (#12)
* Adds Basic Infrastructure

* Adds missing Files

* Adds Workflow and Settings

* Adds health endpoint

* Adapts health endpoint

* Adapts docker compose

* Fixes typo

* Updates Go Docs

---------
